--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ configparser>=5.0.0
 colorama>=0.4.6
 tabulate>=0.9.0
 python-dotenv>=1.0.0
+# HTML reports and charting
+jinja2>=3.0.0
+plotly>=5.10.0
+pandas>=1.3.0
